//------------------------------------------------------------------------------
// {C} Copyright 2018 Pensando Systems Inc. All rights reserved
//
// protobuf specification for IO Test Automation Response Message Types
//------------------------------------------------------------------------------

syntax = "proto3";
package iotamodel;

// Imports
import public "gogo.proto";

import "common.proto";

message IotaAPIResponse{
    enum APIStatus {
        API_STATUS_OK       = 0;
        API_BAD_REQUEST     = 1;
        API_SERVER_ERROR    = 2;
        API_AUTH_FAILURE    = 3;
    }
    // APIStatus captures call status
    APIStatus api_status = 1;
}

// ClusterHealthResponse captures the health of the cluster
message ClusterHealthResponse {
    // Status captures the health of the cluster on a per node basis
    repeated NodeStatus status = 1;
}

// Node status captures the health of an individual node
message NodeStatus {
    enum HealthCode {
        HEALTH_OK      = 0;
        NAPLES_DOWN    = 1;
        NODE_DOWN      = 2;
        APP_DOWN       = 3;
    }
    // API Response
    IotaAPIResponse api_response = 1;

    // Health captures individual node health
    HealthCode      code = 2;
}

// InstantiateApp API Response
message InstantiateAppResponse {
    // API Response
    IotaAPIResponse api_response = 1;
}

// Instantiate Topology API Reponse
message InstantiateTopoResponse {
    // API Response
    IotaAPIResponse api_response = 1;
}


// AddNode API Response
message AddNodeResponse {
    // API Response
    IotaAPIResponse api_response = 1;
}

// Generate Configs API Response
message GeneratedConfigResponse {
    IotaAPIResponse api_response = 1;

    // Generated Configs
    ConfigInfo      configs = 2;
}

// Config Push API Response
message ConfigPushResponse {
    IotaAPIResponse api_response = 1;
}

// App Trigger API Response
message TriggerAppResponse {
    IotaAPIResponse     api_response = 1;
    string              handle = 2;
    string              stdout = 3;
    string              stderr = 4;
    int32               exitcode = 5;
}
